--- a/admin/classes_page.html
+++ b/admin/classes_page.html
@@ -14,8 +14,49 @@
     <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css" />
     <!-- AdminLTE -->
     <link rel="stylesheet" href="../dist/css/adminlte.min.css" />
-    <!-- Custom contact style -->
-    <link rel="stylesheet" href="../contact/contact_style.css" />
+    <!-- datatables style -->
+    <link rel="stylesheet" href="../plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="../plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+    <link rel="stylesheet" href="../plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
+    <!-- daterange picker -->
+    <link
+      rel="stylesheet"
+      href="../plugins/daterangepicker/daterangepicker.css"
+    />
+    <!-- iCheck for checkboxes and radio inputs -->
+    <link
+      rel="stylesheet"
+      href="../plugins/icheck-bootstrap/icheck-bootstrap.min.css"
+    />
+    <!-- Bootstrap Color Picker -->
+    <link
+      rel="stylesheet"
+      href="../plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.min.css"
+    />
+    <!-- Tempusdominus Bootstrap 4 -->
+    <link
+      rel="stylesheet"
+      href="../plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css"
+    />
+    <!-- Select2 -->
+    <link
+      rel="stylesheet"
+      href="../plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css"
+    />
+    <!-- Bootstrap4 Duallistbox -->
+    <link
+      rel="stylesheet"
+      href="../plugins/bootstrap4-duallistbox/bootstrap-duallistbox.min.css"
+    />
+    <!-- BS Stepper -->
+    <link
+      rel="stylesheet"
+      href="../plugins/bs-stepper/css/bs-stepper.min.css"
+    />
+    <!-- dropzonejs -->
+    <link rel="stylesheet" href="../plugins/dropzone/min/dropzone.min.css" />
+    <!-- Theme style -->
+    <link rel="stylesheet" href="../dist/css/adminlte.min.css" />
     <!-- Ionicons -->
     <script
       type="module"
@@ -43,7 +84,7 @@
       </div>
 
       <!-- Navbar -->
-      <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+      <nav class="main-header navbar navbar-expand navbar-white navbar-light ficked-top">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" data-widget="pushmenu" href="#" role="button"
@@ -113,7 +154,7 @@
               data-accordion="false"
             >
               <li class="nav-item">
-                <a href="admin_dash.html" class="nav-link">
+                <a href="dashboard_page.html" class="nav-link">
                   <i class="nav-icon fas fa-tachometer-alt"></i>
                   <p>Dashboard</p>
                 </a>
@@ -127,7 +168,7 @@
               <li class="nav-item">
                 <a href="teachers_page.html" class="nav-link">
                   <i class="nav-icon"
-                    ><ion-icon name="person-add-outline"></ion-icon
+                    ><ion-icon name="person-add"></ion-icon
                   ></i>
                   <p>Teachers</p>
                 </a>
@@ -135,7 +176,7 @@
               <li class="nav-item">
                 <a href="subjects_page.html" class="nav-link">
                   <i class="nav-icon"
-                    ><ion-icon name="library-outline"></ion-icon
+                    ><ion-icon name="library"></ion-icon
                   ></i>
                   <p>Subjects</p>
                 </a>
@@ -143,7 +184,7 @@
               <li class="nav-item">
                 <a href="parents_page.html" class="nav-link">
                   <i class="nav-icon"
-                    ><ion-icon name="people-outline"></ion-icon
+                    ><ion-icon name="people"></ion-icon
                   ></i>
                   <p>Parents</p>
                 </a>
@@ -151,7 +192,7 @@
               <li class="nav-item">
                 <a href="students_page.html" class="nav-link">
                   <i class="nav-icon"
-                    ><ion-icon name="id-card-outline"></ion-icon
+                    ><ion-icon name="id-card"></ion-icon
                   ></i>
                   <p>Students</p>
                 </a>
