--- a/admin/create_student.html
+++ b/admin/create_student.html
@@ -6,13 +6,27 @@
     <title>AdminLTE 3 | Classes Page</title>
 
     <!-- Google Font: Source Sans Pro -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback" />
-    <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css" />
-    <!-- AdminLTE -->
-    <link rel="stylesheet" href="../dist/css/adminlte.min.css" />
-    <!-- Custom contact style -->
-    <link rel="stylesheet" href="../contact/contact_style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css">
+  <!-- daterange picker -->
+  <link rel="stylesheet" href="../plugins/daterangepicker/daterangepicker.css">
+  <!-- iCheck for checkboxes and radio inputs -->
+  <link rel="stylesheet" href="../plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+  <!-- Bootstrap Color Picker -->
+  <link rel="stylesheet" href="../plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.min.css">
+  <!-- Tempusdominus Bootstrap 4 -->
+  <link rel="stylesheet" href="../plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+  <!-- Select2 -->
+  <link rel="stylesheet" href="../plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
+  <!-- Bootstrap4 Duallistbox -->
+  <link rel="stylesheet" href="../plugins/bootstrap4-duallistbox/bootstrap-duallistbox.min.css">
+  <!-- BS Stepper -->
+  <link rel="stylesheet" href="../plugins/bs-stepper/css/bs-stepper.min.css">
+  <!-- dropzonejs -->
+  <link rel="stylesheet" href="../plugins/dropzone/min/dropzone.min.css">
+  <!-- Theme style -->
+  <link rel="stylesheet" href="../dist/css/adminlte.min.css">
     <!-- Ionicons -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
@@ -26,7 +40,7 @@
       </div>
 
       <!-- Navbar -->
-      <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+      <nav class="main-header navbar navbar-expand navbar-white navbar-light fixed-top">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
@@ -121,94 +135,130 @@
       </aside>
 
       <!-- Content Wrapper -->
-      <div class="content-wrapper">
-        <div class="content-header">
-          <div class="container-fluid">
-            <div class="row mb-2">
-              <div class="col-sm-6">
-                <h1 class="m-0">Create a Student</h1>
-                <hr>
-              </div>
-              <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                  <li class="breadcrumb-item"><a href="dashboard_page.html">Home</a></li>
-                </ol>
-              </div>
-            </div>
-          </div>
+<div class="content-wrapper">
+  <div class="content-header">
+    <div class="container-fluid">
+      <div class="row mb-2">
+        <div class="col-sm-6">
+          <h1 class="m-0">Create a Student</h1>
+          <hr>
         </div>
-
-        <!-- form start -->
-        <section class="content">
-          <form role="form">
-            <div class="box-body">
-              <div class="form-group">
-                <label for="First-Name">First Name: </label>
-                <input type="text" class="form-control" id="First-Name" placeholder="Enter the First Name of the student" required />
-              </div>
-              <div class="form-group">
-                <label for="Second-Name">Second Name:</label>
-                <input type="text" class="form-control" id="Second-Name" placeholder="Enter the Second Name of the student" required />
-              </div>
-              <div class="form-group">
-                <label for="Third-Name">Third Name:</label>
-                <input type="text" class="form-control" id="Third-Name" placeholder="Enter the Third Name of the student" required />
-              </div>
-              <div class="form-group">
-                <label for="Last-Name">Last Name:</label>
-                <input type="text" class="form-control" id="Last-Name" placeholder="Enter the Last Name of the student" required />
-              </div>
-              <div class="form-group">
-                <label for="National-ID">National ID:</label>
-                <input type="text" class="form-control" id="National-ID" inputmode="numeric" pattern="[0-9]*" placeholder="Enter the National ID of the student" required />
-              </div>
-              <div class="form-group">
-                <label for="Address">Address:</label>
-                <input type="text" class="form-control" id="Address" placeholder="Enter the Address of the student" required />
-              </div>
-              <div class="form-group">
-                <label for="Status">Status:</label>
-                <input type="text" class="form-control" id="Status" placeholder="Enter the Status of the student" required />
-              </div>
-              <div class="form-group">
-                <label for="dob">Date of Birth:</label>
-                <input class="form-control" type="date" id="dob" name="dob" required>
-              </div>
-              <div class="form-group">
-                <label for="gender">Gender:</label>
-                <select class="form-control" id="gender" name="gender" required>
-                  <option value="" disabled selected>Select your gender</option>
-                  <option value="male">Male</option>
-                  <option value="female">Female</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="Parent National ID">Parent National ID:</label>
-                <input type="text" class="form-control" id="Parent-National-ID" inputmode="numeric" pattern="[0-9]*" placeholder="Enter the Parent National ID" required />
-              </div>
-              <div class="form-group">
-                <label for="School-ID">School ID:</label>
-                <input type="text" class="form-control" id="School-ID" inputmode="numeric" pattern="[0-9]*" placeholder="Enter the School ID" required />
-              </div>
-            </div>
-
-            <div class="box-footer">
-              <button type="button" class="btn btn-secondary"><a href="students_page.html" style="color: white;">Cancel</a></button>
-              <button type="submit" class="btn btn-primary"><a href="students_page.html" style="color: white;">Submit</a></button>
-            </div>
-          </form>
-        </section>
+        <div class="col-sm-6">
+          <ol class="breadcrumb float-sm-right">
+            <li class="breadcrumb-item"><a href="dashboard_page.html">Home</a></li>
+          </ol>
+        </div>
       </div>
     </div>
+  </div>
 
-    <!-- Footer -->
-    <footer class="main-footer">
-      <strong>&copy; 2025 MADRASATI.</strong> All rights reserved.
-    </footer>
+  <!-- form start -->
+  <section class="content">
+      <div class="container-fluid">
+        <div class="col-md-12">
+          <div class ="card card-default">
+            <div class="card-header">
+              <h3 class="card-title">Student Information</h3>
+            </div>
+            <div class="card-body p-0">
+              <div class="bs-stepper linear">
+                <div class="bs-stepper-content">
 
-    <!-- Scripts -->
-    <script src="../plugins/jquery/jquery.min.js"></script>
-    <script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../dist/js/adminlte.min.js"></script>
+        <div class="form-group">
+          <label for="First-Name">First Name: </label>
+          <input type="text" class="form-control" id="First-Name" placeholder="Enter the First Name of the student" required />
+        </div>
+        <div class="form-group">
+          <label for="Second-Name">Second Name:</label>
+          <input type="text" class="form-control" id="Second-Name" placeholder="Enter the Second Name of the student" required />
+        </div>
+        <div class="form-group">
+          <label for="Third-Name">Third Name:</label>
+          <input type="text" class="form-control" id="Third-Name" placeholder="Enter the Third Name of the student" required />
+        </div>
+        <div class="form-group">
+          <label for="Last-Name">Last Name:</label>
+          <input type="text" class="form-control" id="Last-Name" placeholder="Enter the Last Name of the student" required />
+        </div>
+        <div class="form-group">
+          <label for="National-ID">National ID:</label>
+          <input type="text" class="form-control" id="National-ID" inputmode="numeric" pattern="[0-9]*" placeholder="Enter the National ID of the student" required />
+        </div>
+        <div class="form-group">
+          <label for="Address">Address:</label>
+          <input type="text" class="form-control" id="Address" placeholder="Enter the Address of the student" required />
+        </div>
+        <div class="form-group">
+          <label for="Status">Status:</label>
+          <input type="text" class="form-control" id="Status" placeholder="Enter the Status of the student" required />
+        </div>
+        <div class="form-group">
+          <label for="dob">Date of Birth:</label>
+          <input class="form-control" type="date" id="dob" name="dob" required>
+        </div>
+        <div class="form-group">
+          <label for="gender">Gender:</label>
+          <select class="form-control" id="gender" name="gender" required>
+            <option value="" disabled selected>Select your gender</option>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="Parent National ID">Parent National ID:</label>
+          <input type="text" class="form-control" id="Parent-National-ID" inputmode="numeric" pattern="[0-9]*" placeholder="Enter the Parent National ID" required />
+        </div>
+        <div class="form-group">
+          <label for="School-ID">School ID:</label>
+          <input type="text" class="form-control" id="School-ID" inputmode="numeric" pattern="[0-9]*" placeholder="Enter the School ID" required />
+        </div>
+        
+        <button type="reset" class="btn btn" >Cancel</a></button>
+        <button type="submit" class="btn btn-primary"><a href="students_page.html" style="color: white;">Submit</a></button>
+      </div>
+  
+    </div>
+  </div>
+    </div>
+  </div>
+</div>
+  </div>
+  </section>
+
+
+
+      <!-- Footer -->
+      <footer class="main-footer">
+       <strong>&copy; 2025 MADRASATI.</strong> All rights reserved.
+      </footer>
+    </div>
+    <!-- ./wrapper -->
+     <!-- jQuery -->
+<script src="../plugins/jquery/jquery.min.js"></script>
+<!-- Bootstrap 4 -->
+<script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Select2 -->
+<script src="../plugins/select2/js/select2.full.min.js"></script>
+<!-- Bootstrap4 Duallistbox -->
+<script src="../plugins/bootstrap4-duallistbox/jquery.bootstrap-duallistbox.min.js"></script>
+<!-- InputMask -->
+<script src="../plugins/moment/moment.min.js"></script>
+<script src="../plugins/inputmask/jquery.inputmask.min.js"></script>
+<!-- date-range-picker -->
+<script src="../plugins/daterangepicker/daterangepicker.js"></script>
+<!-- bootstrap color picker -->
+<script src="../plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.min.js"></script>
+<!-- Tempusdominus Bootstrap 4 -->
+<script src="../plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+<!-- Bootstrap Switch -->
+<script src="../plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
+<!-- BS-Stepper -->
+<script src="../plugins/bs-stepper/js/bs-stepper.min.js"></script>
+<!-- dropzonejs -->
+<script src="../plugins/dropzone/min/dropzone.min.js"></script>
+<!-- AdminLTE App -->
+<script src="../dist/js/adminlte.min.js"></script>
+<!-- AdminLTE for demo purposes -->
+<script src="../dist/js/demo.js"></script>
   </body>
 </html>
